--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -393,3 +393,14 @@
 	pages={39--53},
 	year={2003}
 }
+
+@article{ronkko2022eight,
+	title={Eight simple guidelines for improved understanding of transformations and nonlinear effects},
+	author={R{\"o}nkk{\"o}, Mikko and Aalto, Eero and Tenhunen, Henni and Aguirre-Urreta, Miguel I},
+	journal={Organizational Research Methods},
+	volume={25},
+	number={1},
+	pages={48--87},
+	year={2022},
+	publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
